--- a/T3_2/index.html
+++ b/T3_2/index.html
@@ -46,6 +46,11 @@
       </script> 
 
       <script src="../libs/other/nipplejs.js"></script>
+      
+      <script src="https://cdn.jsdelivr.net/npm/nipplejs@0.9.0/dist/nipplejs.min.js"></script>
+      <div id="joystickZone" style="position: absolute; bottom: 10px; left: 10px; width: 200px; height: 200px;"></div>
+
+      <button id="shootButton" style="position: absolute; bottom: 10px; right: 200px; width: 100px; height: 100px; font-size: 20px;">S</button>
 
       <div id="loading-screen">
          <button id="myBtn">Start Game</button>
